# mailer_back

./: .env.example  .gitignore  .pre-commit-config.yaml  API_SPEC.md  GEMINI.md  README.md  SPAM_FILTER_PLAN.md  SUMMARIZE_PLAN.md  celerybeat-schedule.db  deploy-settings  dump.rdb  main.py  pyproject.toml  requirements.txt  summarize.md  test_setup.py  예상되는문제점.md
config/: celery.py  settings.py  urls.py  wsgi.py
contact/: models.py  serializers.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_initial.py
email_account/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
email_account/migrations/: 0001_initial.py  0002_rename_email_emailaccount_address.py
email_attachment/: apps.py  models.py  urls.py
email_attachment/migrations/: 0001_initial.py
email_content/: apps.py  models.py  proto.py  serializers.py  urls.py  utils.py  views.py
email_content/migrations/: 0001_initial.py
email_content/service/: imap(oldversion).py  imap.py  smtp.py
email_content/tests/: test_smtp.py
email_metadata/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
email_metadata/migrations/: 0001_initial.py  (+2 more)
mail/: models.py  serializers.py  urls.py  views.py
template/: models.py  request_serializers.py  serializers.py  urls.py  views.py
test_setup/: TEMPLATE.json  inject_common_templates.py  test_setup.py
user/: auth.py  models.py  urls.py  views.py
utils/: SPAM_FILTER_TEST_RESULTS.md  classification_results.txt  search.py  spam_filter.py  summarizer.py  test.py  test_spam_filter.py
utils/prompts/: prompt.py
(+9 files in other folders)
